settable options and profile support remove an unused form/java